--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.10",
+    "@hookform/resolvers": "^3.0.0",
     "@types/node": "18.15.10",
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "graphql": "^16.6.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "react-hook-form": "^7.43.8",
+    "react-use": "^17.4.0",
+    "swr": "^2.1.1",
+    "typescript": "5.0.2",
+    "zod": "^3.21.4"
   }
 }
