--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "characters-rm",
+  "name": "rickandmorty",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest  --updateSnapshot --all",
+    "test:watch": "jest --watch --onlyFailures --updateSnapshot",
+    "coverage": "jest  --collectCoverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.0.0",
@@ -18,6 +21,7 @@
     "date-fns": "^2.29.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "msw": "^1.2.1",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -26,5 +30,13 @@
     "swr": "^2.1.1",
     "typescript": "5.0.2",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0"
   }
 }
