--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
+    "react-icons": "^4.8.0",
     "react-use": "^17.4.0",
     "swr": "^2.1.1",
     "typescript": "5.0.2",
